# whereisqa

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  AUTHORS.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: kubernetes.md  travis.md
kubernetes/: app-deployment.yml  app-ingress.yml  app-service.yml  secret.yml
static/css/: style.css  tooltip.min.css
static/js/: main.js
templates/: _render_env.html  _render_instances.html  base.html  error.html  index.html
tests/: test_whereisqa.py
whereisqa/: __init__.py  instances.py  views.py
