[tool.poetry]
name = "whereisqa"
version = "0.1.0"
description = "Infrastructure dashboard for DevOps"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
aiohttp-jinja2 = "^1.1"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
tox = "^3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
